--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.organization=owlh-net
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
-
+sonar.language=javascript
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
